--- a/forntend/src/pages/Home.module.css
+++ b/forntend/src/pages/Home.module.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
   justify-content: center;
   min-height: 100vh;
-  background: linear-gradient(135deg, var(--color-bg-1), var(--color-bg-2));
+  background: whitesmoke;
   padding: 1rem;
   padding-top: 4rem;
 }
@@ -18,50 +18,6 @@
   max-width: 600px;
   width: 100%;
   text-align: center;
-}
-
-.title {
-  font-size: 2.2rem;
-  margin-bottom: 0.5rem;
-  color: var(--color-primary);
-}
-
-.subtitle {
-  color: var(--color-text);
-  margin-bottom: 2rem;
-}
-
-.form {
-  display: flex;
-  gap: 1rem;
-}
-
-.input {
-  flex: auto;
-  padding: 0.75rem 1rem;
-  border-radius: 0.5rem;
-  border: 1px solid #cbd5e0;
-  font-size: 1rem;
-  transition: border 0.3s ease;
-}
-
-.input:focus {
-  border-color:  var(--color-secondary);
-  outline: none;
-}
-
-.button {
-  background-color: var(--color-primary);
-  color: white;
-  padding: 0.75rem;
-  font-size: 1rem;
-  border: none;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-.description {
   font-size: 1.2rem;
   color: var(--color-text);
 }
