--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -15,25 +15,26 @@
     border-radius: 1.5rem;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.05);
     padding: 2.5rem;
+    padding-top: 1rem;
     max-width: 800px;
     width: 100%;
 }
 
 .title {
     font-size: 2rem;
-    margin-bottom: 1rem;
     color: var(--color-primary);
     text-align: center;
+}
+
+.subTitle {
+    font-size: 1.5rem;
+    color: var(--color-primary);
 }
 
 .url {
     color: var(--color-accent);
     margin-bottom: 0.5rem;
     word-break: break-all;
-}
-
-.results {
-    margin-top: 2rem;  
 }
 
 .resultContainer {
@@ -43,6 +44,24 @@
     font-family: "Segoe UI", sans-serif;
 }
 
+.resultRow {
+    display: flex;
+    gap: 10px;
+}
+
+.resultSummaryInfo {
+    max-width: 70%;
+}
+
+.summaryScore {
+    width: 110px;
+    height: 110px;
+    position: absolute;
+    bottom: 30%;
+    right: 5%;
+    font-size: 40px;
+}
+
 .resultItem {
     position: relative;
     background-color: #f9f9f9;
@@ -50,28 +69,53 @@
     margin-bottom: 1.5rem;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-    transition: background-color 0.3s;
+    transition: transform 0.3s;
+}
+
+.scoreItem {
+    flex-shrink: 1;
+    width: 100px;
+}
+
+.promptItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.promptTip {
+    margin-top: -20px;
+    color: var(--color-tip)
+}
+
+.promptScore {
+    position: absolute;
+    top: 15px;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    margin-right: 1rem;
+}
+
+.promptAnswers {
+    display: flex;
+    flex-direction: column;
+    color: #555;
+}
+
+.promptAnswers li:last-child {
+    margin-bottom: 30px;
 }
 
 .resultItem:hover {
-    background-color: #f0f0f0;
+    transform: scale(1.01);
 }
 
 .resultItem h3 {
     font-size: 1.1rem;
     color: #333;
     margin-bottom: 0.75rem;
-}
-
-.resultItem ul {
-    padding-left: 1.25rem;
-    list-style-type: disc;
-}
-
-.resultItem li {
-    margin-bottom: 0.5rem;
-    line-height: 1.6;
-    color: #555;
 }
 
 .error {
