--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -136,7 +136,7 @@
 }
 
 .resultItem:hover {
-    transform: scale(1.01);
+    transform: scale(1.025);
 }
 
 .resultItem h3 {
@@ -165,4 +165,51 @@
 .empty {
     margin-top: 1rem;
     color: #d69e2e;
+}
+
+.structureScore {
+    position: absolute;
+    /* margin-left:auto;
+    margin-right: auto; */
+    right: 2%;
+    top: 2%;
+    margin-bottom: 3rem;
+    height: 100px;
+    width: 100px;
+    font-size: 40px;
+}
+
+.styledTable {
+  border-collapse: collapse;
+  font-size: 0.95rem;
+  font-family: system-ui, sans-serif;
+  min-width: 100%;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.styledTable thead {
+  background-color: #f5f5f5;
+  color: #333;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.styledTable th,
+.styledTable td {
+  padding: 12px 16px;
+  text-align: left;
+  border-bottom: 1px solid #eee;
+}
+
+.styledTable tr:hover {
+  background-color: #fafafa;
+  transition: background-color 0.2s ease;
+}
+
+.styledTable tbody tr:last-child td {
+  border-bottom: none;
 }
