--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -179,37 +179,52 @@
     font-size: 40px;
 }
 
+.structureSummary {
+    margin: 2rem 0 2rem 0;
+}
+
+.structureStrengthsAndWeaknesses {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    gap: 10%;
+}
+
 .styledTable {
-  border-collapse: collapse;
-  font-size: 0.95rem;
-  font-family: system-ui, sans-serif;
-  min-width: 100%;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    margin: 0 0 2rem 0;
+    border-collapse: collapse;
+    font-size: 0.95rem;
+    font-family: system-ui, sans-serif;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+
+.fullTable {
+    min-width: 100%;
 }
 
 .styledTable thead {
-  background-color: #f5f5f5;
-  color: #333;
-  text-transform: uppercase;
-  font-weight: 600;
+    background-color: #f5f5f5;
+    color: #333;
+    text-transform: uppercase;
+    font-weight: 600;
 }
 
 .styledTable th,
 .styledTable td {
-  padding: 12px 16px;
-  text-align: left;
-  border-bottom: 1px solid #eee;
+    padding: 12px 16px;
+    text-align: left;
+    border-bottom: 1px solid #eee;
 }
 
 .styledTable tr:hover {
-  background-color: #fafafa;
-  transition: background-color 0.2s ease;
+    background-color: #fafafa;
+    transition: background-color 0.2s ease;
 }
 
 .styledTable tbody tr:last-child td {
-  border-bottom: none;
+    border-bottom: none;
 }
