--- a/frontend/src/components/Analyze.module.css
+++ b/frontend/src/components/Analyze.module.css
@@ -8,24 +8,25 @@
 .input {
   flex: auto;
   padding: 0.75rem 1rem;
-  border-radius: 0.5rem;
-  border: 1px solid #cbd5e0;
+  border-radius: 30px;
+  border: none;
+  outline: none;
   font-size: 1rem;
   transition: border 0.3s ease;
 }
 
 .input:focus {
-  border-color:  var(--color-secondary);
-  outline: none;
+  border: none;
+  outline: 6px solid var(--color-primary);
 }
 
 .button {
   background-color: var(--color-primary);
   color: white;
-  padding: 0.75rem;
+  padding: 1rem 2rem;
   font-size: 1rem;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: 30px;
   cursor: pointer;
   transition: background 0.3s ease;
 }
