--- a/frontend/src/components/Hero.module.css
+++ b/frontend/src/components/Hero.module.css
@@ -1,15 +1,11 @@
 @import '../styles/variables.css';
 
 .hero {
-    height: 90vh;
-    padding: 2rem;
+    /* height: 90vh; */
+    padding: 2rem 0 2rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: black; /* fallback */
-    background-image: 
-      radial-gradient(circle at -5% 40%, var(--color-bg-1) 0%, transparent 40%),
-      radial-gradient(circle at 100% 100%, var(--color-bg-1) 0%, transparent 60%);
     position: relative;
     overflow: hidden;
 }
@@ -34,7 +30,7 @@
 }
 
 .headline h1 {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: lighter;
   margin: 0;
   font-size: 4rem;
@@ -105,6 +101,7 @@
 }
 
 .actionButtons button {
+  cursor: pointer;
   color: white;
   font-size: 1rem;
   padding: 1rem 2rem;
