--- a/frontend/src/components/Footer.module.css
+++ b/frontend/src/components/Footer.module.css
@@ -5,7 +5,7 @@
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     color: white;
-    padding: 2rem 8rem 2rem 8rem;
+    padding: 2rem 8rem 1rem 8rem;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 2rem;
 }
@@ -17,7 +17,7 @@
 
 .footerBot {
     display: flex;
-    margin-bottom: 1rem;
+    margin-top: 3rem;
     justify-content: space-between;
 }
 
