--- a/frontend/src/components/Score.module.css
+++ b/frontend/src/components/Score.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background: conic-gradient(var(--color-primary) calc(var(--score) * 1%), var(--color-card) 0%);
+    background: conic-gradient(var(--color-accent) calc(var(--score) * 1%), var(--color-card) 0%);
     --score: 0;
     color: white;
     font-weight: bold;
@@ -23,5 +23,5 @@
     align-items: center;
     justify-content: center;
     font-weight: bold;
-    color: var(--color-primary);
+    color: var(--color-accent);
 }
