QueryResult split into tabs

--- a/frontend/src/components/Score.module.css
+++ b/frontend/src/components/Score.module.css
@@ -24,4 +24,11 @@
     justify-content: center;
     font-weight: bold;
     color: var(--color-accent);
+    
+}
+
+.centered {
+    position: relative;
+    top: -2px;
+    left: -1px;
 }
