--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -1,23 +1,40 @@
 @import '../styles/variables.css';
 
-.wrapper {
+h2, h3 {
+    margin: 0;
+    margin-bottom: 2rem;
+}
+
+.container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    padding: 2rem;
+    gap: 2rem;
     padding-top: 8rem;
-    background: linear-gradient(135deg, var(--color-bg-1), var(--color-bg-2));
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: black; /* fallback */
+    background-image: 
+      radial-gradient(circle at -20% 20%, var(--color-bg-1) 0%, transparent 25%),
+      radial-gradient(circle at 100% 30%, var(--color-bg-1) 0%, transparent 60%),
+      radial-gradient(circle at 70% 135%, var(--color-secondary) 0%, transparent 35%),
+      radial-gradient(circle at 50% 135%, var(--color-primary) 0%, transparent 35%),
+      radial-gradient(circle at 110% 0%, var(--color-secondary) 0%, transparent 20%);
+    position: relative;
+    overflow: hidden;
+    min-height: 100vh;
 }
 
 .card {
+    margin: 0 auto;
     background-color: var(--color-card);
-    border-radius: 1.5rem;
+    border-radius: 15px;
+    overflow: hidden;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.05);
-    padding: 2.5rem;
-    padding-top: 1rem;
     max-width: 800px;
     width: 100%;
+}
+
+.cardContent {
+    padding: 1rem 2rem;
 }
 
 .title {
@@ -49,8 +66,9 @@
     gap: 1.5rem;
 }
 
-.resultSummaryInfo {
-    max-width: 70%;
+.resultCol {
+    display: flex;
+    flex-direction: column;
 }
 
 .summaryScore {
@@ -63,6 +81,7 @@
 }
 
 .resultItem {
+    flex-grow: 1;
     position: relative;
     background-color: rgba(255, 255, 255, 0.1);
     color: white;
@@ -72,7 +91,6 @@
     border-radius: 12px;
     backdrop-filter: blur(10px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-    transition: transform 0.3s;
 }
 
 .flexTwoParts {
@@ -81,9 +99,9 @@
 
 .suggestionCard {
     display: flex;
-    gap: 0.25rem;
     flex-direction: column;
-    flex: 1;
+    justify-content: start;
+    gap: 2rem
 }
 
 .suggestionsContainer {
@@ -138,10 +156,6 @@
     margin-bottom: 30px;
 }
 
-.resultItem:hover {
-    transform: scale(1.025);
-}
-
 .resultItem h3 {
     font-size: 1.1rem;
     margin-bottom: 0.75rem;
@@ -181,17 +195,6 @@
     font-size: 40px;
 }
 
-.structureSummary {
-    margin: 2rem 0 2rem 0;
-}
-
-.structureStrengthsAndWeaknesses {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    gap: 10%;
-}
-
 .styledTable {
     margin: 0 0 2rem 0;
     border-collapse: collapse;
@@ -222,11 +225,47 @@
     background-color: var(--color-text);
 }
 
-.styledTable tr:hover {
+.styledTable tbody tr:hover {
     background-color: var(--color-card);
     transition: background-color 0.2s ease;
 }
 
 .styledTable tbody tr:last-child td {
     border-bottom: none;
+}
+
+.tabs {
+    display: flex;
+    position:relative;
+    top: -10px;
+    border-bottom: 4px solid var(--color-accent);
+}
+
+.tabButton {
+    height: 50px;
+    color: white;
+    flex: 1;
+    padding: 12px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background 0.3s;
+    background-color: none;
+}
+
+.tabButton.active {
+    background-color: var(--color-accent);
+}
+
+.summaryLine {
+    display: flex;
+    height: 75px;
+    justify-content: space-between;
+}
+
+.summaryPartScore {
+    position: relative;
+    width: 50px;
+    height: 50px;
 }
