--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -25,7 +25,6 @@ h2, h3 {
 
 .card {
     margin: 0 auto;
-    background-color: var(--color-card);
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.05);
@@ -41,6 +40,8 @@ h2, h3 {
     font-size: 2rem;
     color: var(--color-primary);
     text-align: center;
+    width: 700px;
+    margin: 0 auto;
 }
 
 .subTitle {
@@ -72,12 +73,12 @@ h2, h3 {
 }
 
 .summaryScore {
-    width: 110px;
-    height: 110px;
+    width: 200px;
+    height: 200px;
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    font-size: 40px;
+    font-size: 70px;
 }
 
 .resultItem {
@@ -91,6 +92,10 @@ h2, h3 {
     border-radius: 12px;
     backdrop-filter: blur(10px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+}
+
+.flexOne {
+    flex: 1;
 }
 
 .flexTwoParts {
@@ -239,6 +244,10 @@ h2, h3 {
     position:relative;
     top: -10px;
     border-bottom: 4px solid var(--color-accent);
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    overflow: hidden;
 }
 
 .tabButton {
