--- a/frontend/src/components/Score.module.css
+++ b/frontend/src/components/Score.module.css
@@ -3,8 +3,9 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background: conic-gradient(var(--color-accent) calc(var(--score) * 1%), var(--color-card) 0%);
+    background: conic-gradient(var(--circle-color) calc(var(--score) * 1%), var(--color-card) 1%);
     --score: 0;
+    --circle-color: #fff;
     color: white;
     font-weight: bold;
     font-size: 1em;
