--- a/frontend/src/components/Analyze.module.css
+++ b/frontend/src/components/Analyze.module.css
@@ -1,5 +1,11 @@
 @import '../styles/variables.css';
 
+h3 {
+  color: white;
+  font-weight: lighter;
+  text-align: center;
+}
+
 .form {
   display: flex;
   gap: 1rem;
