--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -38,8 +38,9 @@ h2, h3 {
 }
 
 .title {
-    font-size: 2rem;
-    color: var(--color-primary);
+    font-size: 3rem;
+    font-weight: 100;
+    color: white;
     text-align: center;
     width: 700px;
     margin: 0 auto;
@@ -160,6 +161,17 @@ h2, h3 {
 
 .promptAnswers li:last-child {
     margin-bottom: 30px;
+}
+
+.highlightAnswer {
+    border: 2px solid #27ae60;
+    border-radius: 4px;
+    padding: 5px 10px;
+    background-color: rgba(0, 255, 0, 0.1);
+    color: white;
+    font-weight: bold;
+    list-style: none;
+    transform: translateX(-35px);
 }
 
 .resultItem h3 {
