--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -252,6 +252,33 @@ h2, h3 {
     border-bottom: none;
 }
 
+.overviewGood {
+    border-radius: 4px;
+    padding: 4px 8px;
+    background-color: #27ae60;
+    color: white;
+    font-weight: bold;
+    transform: translateX(-35px);
+}
+
+.overviewMid {
+    border-radius: 4px;
+    padding: 4px 8px;
+    background-color: #e67e22;
+    color: white;
+    font-weight: bold;
+    transform: translateX(-35px);
+}
+
+.overviewBad {
+    border-radius: 4px;
+    padding: 4px 8px;
+    background-color: #e74c3c;
+    color: white;
+    font-weight: bold;
+    transform: translateX(-35px);
+}
+
 .tabs {
     display: flex;
     position:relative;
