--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -1,6 +1,6 @@
 @import '../styles/variables.css';
 
-h2, h3 {
+h2, .structureTitle {
     margin: 0;
     margin-bottom: 2rem;
 }
@@ -172,11 +172,6 @@ h2, h3 {
     font-weight: bold;
     list-style: none;
     transform: translateX(-35px);
-}
-
-.resultItem h3 {
-    font-size: 1.1rem;
-    margin-bottom: 0.75rem;
 }
 
 .error {
