Score - text color & center

--- a/frontend/src/components/Score.module.css
+++ b/frontend/src/components/Score.module.css
@@ -29,7 +29,8 @@
 }
 
 .centered {
+    color: var(--circle-color);
     position: relative;
-    top: -2px;
-    left: -1px;
+    width: 100%;
+    text-align: center;
 }
