--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -247,31 +247,21 @@ h2, .structureTitle {
     border-bottom: none;
 }
 
-.overviewGood {
+.overviewResult {
     border-radius: 4px;
     padding: 4px 8px;
-    background-color: #27ae60;
-    color: white;
-    font-weight: bold;
-    transform: translateX(-35px);
 }
 
-.overviewMid {
-    border-radius: 4px;
-    padding: 4px 8px;
-    background-color: #e67e22;
-    color: white;
-    font-weight: bold;
-    transform: translateX(-35px);
+.overviewResult.good {
+    color: #27ae60;
 }
 
-.overviewBad {
-    border-radius: 4px;
-    padding: 4px 8px;
-    background-color: #e74c3c;
-    color: white;
-    font-weight: bold;
-    transform: translateX(-35px);
+.overviewResult.mid {
+    color: #e67e22;
+}
+
+.overviewResult.bad {
+    color: #e74c3c;
 }
 
 .tabs {
