--- a/frontend/src/components/Hero.module.css
+++ b/frontend/src/components/Hero.module.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     position: relative;
     overflow: hidden;
+    align-items: stretch;
 }
 
 .content {
@@ -66,6 +67,14 @@
   height: 50px;
   background-color: white;
   border-radius: 50px;
+  -webkit-mask-image: radial-gradient(circle, #000 100%, transparent 100%);
+}
+
+.customerBubble img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;  /* fills bubble and crops if needed */
+  display: block;
 }
 
 .customerQuotes {
@@ -123,11 +132,26 @@
   background-color: var(--color-primary);
 }
 
+@media (max-width: 992px) {
+  .video {
+    display: none;
+  }
+}
+
 .video {
   flex: 0.85;
   text-align: center;
   align-content: center;
   background-color: white;
+  overflow: hidden;
+  height: 80vh;
+}
+
+.video video {
+  width: 101%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .scrollHint {
