--- a/frontend/src/pages/Account.module.css
+++ b/frontend/src/pages/Account.module.css
@@ -5,13 +5,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: black; /* fallback */
-    background-image: 
-        radial-gradient(circle at -20% 20%, var(--color-bg-1) 0%, transparent 25%),
-        radial-gradient(circle at 100% 0%, var(--color-bg-1) 0%, transparent 60%);
 }
 
-.accountContainer p {
+.signupMessage {
     color: white;
     text-align: center;
 }
