--- a/frontend/src/components/KeyAction.module.css
+++ b/frontend/src/components/KeyAction.module.css
@@ -9,7 +9,8 @@
 }
 
 .tag {
-    padding: 0 2rem;
+    padding: 0 0.6rem;
+    text-align: center;
     font-weight: bold;
     border-radius: 4px;
     align-content: center;
