--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,5 +1,3 @@
-@import '../styles/variables.css';
-
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -11,13 +9,13 @@
     z-index: 10;
 }
 
-a {
-    color: white;
+.nav_link {
+    color: var(--color-muted);
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
-a:hover {
+.nav_link:hover {
   color: var(--color-accent);
 }
 
