--- a/frontend/src/components/UserInfo.module.css
+++ b/frontend/src/components/UserInfo.module.css
@@ -5,7 +5,7 @@
     background: none;
 }
 
-.loginContainer button, a {
+.loginContainer button{
     padding: 0rem 1rem;
     border: 0;
     border-radius: 10px;
@@ -14,7 +14,7 @@
     align-content: center;
 }
 
-.loginContainer button:hover, a:hover {
+.loginContainer button:hover{
     background-color: var(--color-accent);
     color: white;
 }
@@ -38,5 +38,28 @@
 
 .welcomeMessage {
     align-content: center;
+    color: white;
+}
+
+.suggestionButton {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    padding: 0rem 1.3rem;
+    border: 0;
+    border-radius: 10px;
+    background: var(--color-card);
+    color: white;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+}
+
+.suggestionButton {
+    color: white;
+    text-decoration: none;
+}
+
+.suggestionButton:hover {
+    background-color: var(--color-accent);
     color: white;
 }
