--- a/frontend/src/pages/QueryResult.module.css
+++ b/frontend/src/pages/QueryResult.module.css
@@ -1,5 +1,3 @@
-@import '../styles/variables.css';
-
 h2, .structureTitle {
     margin: 0;
     margin-bottom: 2rem;
@@ -31,7 +29,7 @@ h2, .structureTitle {
 }
 
 .cardContent {
-    padding: 1rem 2rem;
+    padding: 1rem 0;
     min-height: 70vh;
 }
 
